--- a/fluEvidenceSynthesis/vignettes/vaccination.Rmd
+++ b/fluEvidenceSynthesis/vignettes/vaccination.Rmd
@@ -9,6 +9,13 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+This package implements all the tools needed to analyse and compare the effectiveness of different Influenza vaccine programs (see Baguelin et al. (2013) for more details). This analysis has two main steps.
+
+#. Parameter inference using existing model
+#. Simulation of different possible vaccination strategies using the inferred parameters
+
+This vignette will focus on how the fluEvidenceSythesis package can be used to perform the second step. For details on the first step see the inference vignette.
+
 General flow
 
 Setup vaccination scenario
