--- a/fluEvidenceSynthesis/vignettes/vaccination.Rmd
+++ b/fluEvidenceSynthesis/vignettes/vaccination.Rmd
@@ -9,6 +9,8 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+# Introduction
+
 This package implements all the tools needed to analyse and compare the effectiveness of different Influenza vaccine programs (see Baguelin et al. (2013) for more details). This analysis has two main steps.
 
 #. Parameter inference using existing model
@@ -16,13 +18,28 @@ This package implements all the tools needed to analyse and compare the effectiv
 
 This vignette will focus on how the fluEvidenceSythesis package can be used to perform the second step. For details on the first step see the inference vignette.
 
-General flow
+To test the efficacy of different vaccination scenarios you first need to create a custom vaccination scenario. A vaccination scenario specifies the rate of vaccination per day of each age group and risk group during a given period. The epidemiological model is then run with this scenario. To run the model we need to specify the epidemiological parameters that we inferred by fitting the model to our Influenza data (see inference vignette).
 
-Setup vaccination scenario
+# Example
 
-Run vaccination scenario (with one mcmcsample)
+```{r, eval=FALSE}
+library("fluEvidenceSynthesis")
 
-Notes on doing for whole posterior output
+# Create vaccination scenario
+
+# Load needed data
+data("age_sizes")
+data("mcmcsample")
+data("polymod_uk")
+
+# This returns the total size of the outbreak given the vaccination scenario and the
+# posterior (mcmc) sample
+vaccinationScenario( age_sizes=age_sizes[,1], vaccine_calendar=vaccine_calendar,
+  sample=mcmcsample, 
+  polymod_uk=as.matrix(polymod_uk) )
+```
+
+The above shows how to use a specific posterior (mcmc) sample to create one prediction. In general you should have a number of samples from the posterior and you call vaccinationScenario using each of those samples. This will result in a posterior distribution for the predicted efficacy of your vaccinationScenario. This can then be used for further analysis, such as the cost effectiveness of your analysis.
 
 # References
 
