--- a/vignettes/modelling.Rmd
+++ b/vignettes/modelling.Rmd
@@ -57,7 +57,7 @@ initial.infected <- separate.into.risk.groups( ag, matrix(c(0.01,0.4),nrow=1) ) 
 
 ### Vaccine calendar
 
-The vaccine calendar during the year. See the [vaccination vignette](https://blackedder.github.io/flu-evidence-synthesis/vaccination.html) for a more in depth explanation of this object. Here we will assume a constant rate of vaccination for four months, with no vaccination for the low risk, younger group.
+The vaccine calendar during the year. See the [vaccination vignette](https://blackedder.github.io/flu-evidence-synthesis/vaccination.html) for a more in depth explanation of this object. Here we will assume a constant percentage being vaccinated four months. The elderly and high risk groups are vaccinated at the highest rate, with no vaccination for the low risk, younger group. For example this means that the elderly have a total vaccination coverage after four months of: $0.007*31+0.007*30+0.007*31+0.007*31=0.861$
 
 ```{r}
 vaccine_calendar <- list(
@@ -107,6 +107,23 @@ pander(head(odes))
 ```
 
 ```{r}
-ggplot( data=odes ) + geom_line( aes(x=Time, y=V1 ) ) + 
-  geom_line( aes(x=Time,y=V2) )
+fraction.infected <- odes
+fraction.infected$V1 <- fraction.infected$V1/population[1]
+fraction.infected$V2 <- fraction.infected$V2/population[2]
+fraction.infected$V3 <- fraction.infected$V3/population[3]
+fraction.infected$V4 <- fraction.infected$V4/population[4]
+
+ggplot( data=fraction.infected ) + geom_line( aes(x=Time, y=V1, colour = "<65") ) + 
+  geom_line( aes(x=Time,y=V2, colour="65+") )  + 
+  geom_line( aes(x=Time, y=V3, colour="<65 High risk") ) +
+  geom_line( aes(x=Time,y=V4, colour="65+ High risk"),linetype=2 ) +
+  scale_colour_manual("", 
+                      breaks = c("<65","65+","<65 High risk","65+ High risk"),
+                      values = c("darkblue","blue","darkred","red")) +
+  ylab( "Fraction infected" )
 ```
+
+## Possible exercises
+
+1. Try different vaccine calendars and compare the results
+2. Explore different parameter values
